Prepare for publishing

--- a/PSMeter/build.gradle
+++ b/PSMeter/build.gradle
@@ -61,7 +61,7 @@ afterEvaluate {
                 from components.release
 
                 // You can then customize attributes of the publication as shown below.
-                groupId = 'com.baianat.MPSMeter'
+                groupId = 'com.baianat.PSMeter'
                 artifactId = 'final'
                 version = '1.0'
             }
