Prepare for release

--- a/Example/build.gradle
+++ b/Example/build.gradle
@@ -13,7 +13,7 @@ android {
         targetSdkVersion androidTargetSdkVersion
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -58,4 +58,6 @@ dependencies {
     androidTestImplementation testsDependencies.barista
     implementation testsDependencies.testCore
     implementation project(':IPSMeter')
+    def multidex_version = "2.0.1"
+    implementation "androidx.multidex:multidex:$multidex_version"
 }
