--- a/PSMeter/build.gradle
+++ b/PSMeter/build.gradle
@@ -13,14 +13,15 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-        multiDexEnabled true
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
-        debug {
-            debuggable true
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
@@ -51,8 +52,6 @@ dependencies {
     implementation  "io.reactivex.rxjava3:rxkotlin:${rxKotlinVersion}"
     implementation  "io.reactivex.rxjava3:rxandroid:${rxAndroidVersion}"
 
-    def multidex_version = "2.0.1"
-    implementation "androidx.multidex:multidex:$multidex_version"
 }
 afterEvaluate {
     publishing {
@@ -63,7 +62,7 @@ afterEvaluate {
                 from components.release
 
                 // You can then customize attributes of the publication as shown below.
-                groupId = 'com.baianat.IPSMeter'
+                groupId = 'com.baianat.JPSMeter'
                 artifactId = 'final'
                 version = '1.0'
             }
