--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,19 +13,16 @@ android {
         targetSdkVersion androidTargetSdkVersion
         versionCode 1
         versionName "1.0"
-        multiDexEnabled true
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
-        debug {
-            signingConfig signingConfigs.debug
-            debuggable true
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
-
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -57,7 +54,5 @@ dependencies {
     androidTestImplementation testsDependencies.espresso
     androidTestImplementation testsDependencies.barista
     implementation testsDependencies.testCore
-    implementation project(':IPSMeter')
-    def multidex_version = "2.0.1"
-    implementation "androidx.multidex:multidex:$multidex_version"
+    implementation project(':PSMeter')
 }
